<resources>
    <string name="app_name">Yoyo Cinema</string>

    <!--  Main Activity  -->

    <!--  App Bar Fragment  -->
    <string name="search_icon_description">Search Icon</string>
    <string name="favourites_icon_description">Favourites Icon</string>
    <string name="search_hintext">Search for...</string>

    <!--  Info Fragment  -->
    <plurals name="results_displayed">
        <item quantity="one">One result found</item>
        <item quantity="other">%d results found</item>
    </plurals>
    <string name="results_placeholder">Fetching results</string>
    <string name="results_error">Error fetching results</string>

    <!--  Results Fragment  -->
    <string name="rating">Rating</string>
    <string name="poster_description">Poster Image</string>
    <string name="title_placeholder">Movie Title Placeholder</string>
    <string name="description_placeholder">For centuries, a small but powerful force of warriors called the Green Lantern Corps has sworn to keep intergalactic order. Each Green Lantern wears a ring that grants him superpowers. But when a new enemy called Parallax threatens to destroy the balance of power in the Universe, their fate and the fate of Earth lie in the hands of the first human ever recruited.</string>
    <string name="release_placeholder">Released 01 December 1999</string>
    <string name="released">Released</string>
    <string name="favourite_description">Favourite Button</string>
    <string name="image_base_uri">https://image.tmdb.org/t/p/w500/</string>

    <!--  Movie Details Activity  -->
    <string name="website">Website: </string>
    <string name="genres">Genres: </string>
    <string name="budget">Budget:</string>
    <string name="revenue">Revenue:</string>
    <string name="runtime">Runtime:</string>
    <string name="budget_details">...</string>
    <string name="revenue_details">...</string>
    <string name="runtime_details">minutes</string>
    <string name="production_company_logo">Production Company Logo</string>

</resources>
